# claude-control

./: .gitignore  README.md  projects.json.example  pyproject.toml  requirements.txt  run_server.py
.github/workflows/: publish-python.yml
claude_control/: __init__.py  __main__.py  config.py  job.py  job_manager.py  server.py  session_manager.py
tests/: conftest.py  fake_claude.py  test_job.py  test_job_manager.py
