[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "claude-control"
version = "0.1.0"
description = "MCP server for coordinating Claude Code instances across multiple projects"
requires-python = ">=3.11"
dependencies = [
    "claude-code-sdk>=0.0.25",
    "mcp>=1.12.0",
]

[project.scripts]
claude-control = "claude_control.server:main"
