[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "claude-control"
version = "0.1.0"
description = "MCP server for coordinating Claude Code instances across multiple projects"
readme = "README.md"
requires-python = ">=3.11"
license = "MIT"
authors = [
  {name = "Red Duck Labs", email = "support@redducklabs.com"}
]
keywords = ["mcp", "claude", "claude-code", "automation", "orchestration"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Intended Audience :: Developers",
  "Operating System :: OS Independent",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Programming Language :: Python :: 3.13",
  "Topic :: Software Development :: Libraries :: Python Modules",
]
dependencies = [
    "claude-code-sdk>=0.0.25",
    "mcp>=1.12.0",
]

[project.scripts]
claude-control = "claude_control.server:main"

[project.urls]
Homepage = "https://github.com/redducklabs/claude-control"
Repository = "https://github.com/redducklabs/claude-control"
Issues = "https://github.com/redducklabs/claude-control/issues"

[tool.setuptools.packages.find]
where = ["."]
include = ["claude_control*"]
